# file_enfing_webdav

./: .env  .env-default  .gitignore  CMakeLists.txt  IMPLEMENTATION.md  README.md  SPECIFICATIONS.md  generate_grpc.sh  test_webdav.sh
include/: grpc_client_wrapper.h  ldap_authenticator.h  path_resolver.h  utils.h  webdav_server.h
proto/: fileservice.proto
proto/include/: fileservice.grpc.pb.h  fileservice.pb.h
proto/src/: fileservice.grpc.pb.cc  fileservice.pb.cc
src/: grpc_client_wrapper.cpp  ldap_authenticator.cpp  main.cpp  path_resolver.cpp  utils.cpp  webdav_server.cpp
tests/: test_grpc_client.cpp  test_ldap_auth.cpp  test_ldap_authenticator.cpp  test_main.cpp  test_path_resolver.cpp  test_webdav_server.cpp
